feat: add supplement request mock event flow (#8)
